APPLICATION=db_MySQLi Class

V0.2.0:

10-Dec-2015 - Added new example test_bind_vars.php which tests the new methods
              related to binding params and result sets including a small benchmark
              to compare bind-vars vs. static queries

            - Added new methods:
              * Prepare()
              * Execute()

            - Rewritten QueryHash() to utilize Prepare() and Execute() methods.

07-Dec-2015 - Added Bindvar support, currently only QueryHash() method is implemented.

            - Reworked all examples and documentation

V0.1.3:

09-Jan-2014 - Public release as v0.1.3.

            - Finished documentation.

05-Jan-2014 - Updated documentation and added missing README to release as 0.1.3

            - Added method "GetPConnect()" to retrieve persistant connection flag.

V0.1.2:

28-Sep-2014 - Removed all remaining references to MYSQL inside the documentation.

V0.1.1:

01-Sep-2014 - Renamed "EnableCompatibleMode()" to "SetCompatMode()" and added
              missing defines for MYSQL_ASSOC, MYSQL_BOTH and MYSQL_NUM

24-Aug-2014 - Added all examples from MySQL() class, also added new tests.

            - Added new methods:
              * Set_CharSet()
              * Get_CharSet()
              * EnableCompatibleMode()
              * DescTable()
              * GetErrorHandling()
              * AffectedRows()
              * NumRows()
              * PerformNewInsert()
              * SetPConnect()

            - Changed constructor method, now it is defined as __construct(),
              also changed all class variables and constants.

            - During PHP's decision to drop the mysql extension in favour of
              the mysqli class, it was necessary to complete this class as
              a replacement for my old mysql class. This in turn requires
              renaming of all defines to match the old class. Also code
              from old class ported to this class to make it usable as if